--- a/src/ayana/RegistroIngresos.form
+++ b/src/ayana/RegistroIngresos.form
@@ -130,9 +130,9 @@
                           <Component id="cbxFiltro" min="-2" pref="158" max="-2" attributes="0"/>
                           <EmptySpace pref="43" max="32767" attributes="0"/>
                           <Component id="lblSaldo" min="-2" pref="34" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                           <Component id="jScrollPane7" min="-2" pref="106" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                           <Component id="btnAgregarPago" min="-2" pref="114" max="-2" attributes="0"/>
                       </Group>
                       <Component id="jScrollPane4" alignment="1" pref="796" max="32767" attributes="0"/>
@@ -343,19 +343,18 @@
                   <Color blue="e5" green="ef" red="fd" type="rgb"/>
                 </Property>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="InaiMathi" size="18" style="3"/>
+                  <Font name="InaiMathi" size="18" style="0"/>
                 </Property>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="0" green="0" red="0" type="rgb"/>
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="12" rowCount="0">
+                  <Table columnCount="11" rowCount="0">
                     <Column editable="false" title="Id" type="java.lang.Integer"/>
                     <Column editable="false" title="Fecha" type="java.lang.Object"/>
                     <Column editable="false" title="Categor&#xed;a" type="java.lang.Object"/>
                     <Column editable="false" title="Cliente" type="java.lang.Object"/>
                     <Column editable="false" title="Detalle" type="java.lang.Object"/>
-                    <Column editable="false" title="Tipo de Pago" type="java.lang.Object"/>
                     <Column editable="false" title="Cuenta" type="java.lang.Object"/>
                     <Column editable="false" title="Factura" type="java.lang.Boolean"/>
                     <Column editable="false" title="No. de Factura" type="java.lang.Object"/>
@@ -422,12 +421,10 @@
                       <Editor/>
                       <Renderer/>
                     </Column>
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                      <Title/>
-                      <Editor/>
-                      <Renderer/>
-                    </Column>
                   </TableColumnModel>
+                </Property>
+                <Property name="gridColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="99" green="99" red="99" type="rgb"/>
                 </Property>
                 <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[2147483647, 2147483647]"/>
