--- a/src/ayana/ServiciosForm.form
+++ b/src/ayana/ServiciosForm.form
@@ -65,10 +65,6 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="title" type="java.lang.String" value="Inventarios"/>
-    <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-      <Color blue="ff" green="ff" red="ff" type="rgb"/>
-    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar4"/>
@@ -117,8 +113,8 @@
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="jScrollPane1" max="32767" attributes="0"/>
-                      <Component id="jPanel3" max="32767" attributes="0"/>
+                      <Component id="jScrollPane1" alignment="1" max="32767" attributes="0"/>
+                      <Component id="jPanel3" alignment="1" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -131,7 +127,7 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jPanel3" min="-2" pref="31" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jScrollPane1" pref="414" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" pref="372" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -157,7 +153,7 @@
                       <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
                       <Component id="cbxFiltro" min="-2" pref="206" max="-2" attributes="0"/>
-                      <EmptySpace pref="109" max="32767" attributes="0"/>
+                      <EmptySpace pref="129" max="32767" attributes="0"/>
                       <Component id="btnNuevoCliente" min="-2" pref="171" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -192,16 +188,13 @@
                   <Color blue="33" green="33" red="33" type="rgb"/>
                 </Property>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="9">
-                    <StringItem index="0" value="Id de inventario"/>
+                  <StringArray count="6">
+                    <StringItem index="0" value="Id de servicio"/>
                     <StringItem index="1" value="Categor&#xed;a"/>
-                    <StringItem index="2" value="Producto"/>
-                    <StringItem index="3" value="Costo proveedor"/>
-                    <StringItem index="4" value="Precio unitario"/>
-                    <StringItem index="5" value="Distribuidora stock"/>
-                    <StringItem index="6" value="Cabina stock"/>
-                    <StringItem index="7" value="Punto de venta stock"/>
-                    <StringItem index="8" value="En pedidos"/>
+                    <StringItem index="2" value="Servicio"/>
+                    <StringItem index="3" value="Costo"/>
+                    <StringItem index="4" value="Precio individual"/>
+                    <StringItem index="5" value="Precio en paquete"/>
                   </StringArray>
                 </Property>
               </Properties>
@@ -267,7 +260,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="33" green="33" red="33" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Agregar nuevo producto"/>
+                <Property name="text" type="java.lang.String" value="Agregar nuevo servicio"/>
                 <Property name="toolTipText" type="java.lang.String" value=""/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
@@ -296,7 +289,7 @@
               <Color blue="0" green="0" red="0" type="rgb"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="Inventarios"/>
+            <Property name="text" type="java.lang.String" value="Servicios"/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
         </Component>
@@ -324,16 +317,13 @@
                   <Color blue="0" green="0" red="0" type="rgb"/>
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="9" rowCount="0">
-                    <Column editable="false" title="Id de inventario" type="java.lang.Integer"/>
+                  <Table columnCount="6" rowCount="0">
+                    <Column editable="false" title="Id de servicio" type="java.lang.Integer"/>
                     <Column editable="false" title="Categor&#xed;a" type="java.lang.Object"/>
-                    <Column editable="false" title="Producto" type="java.lang.Object"/>
-                    <Column editable="false" title="Costo proveedor" type="java.lang.Double"/>
-                    <Column editable="false" title="Precio unitario" type="java.lang.Double"/>
-                    <Column editable="false" title="Distribuidora stock" type="java.lang.Integer"/>
-                    <Column editable="false" title="Punto de venta stock" type="java.lang.Integer"/>
-                    <Column editable="false" title="Cabina stock" type="java.lang.Integer"/>
-                    <Column editable="false" title="En pedidos" type="java.lang.Integer"/>
+                    <Column editable="false" title="Servicio" type="java.lang.Object"/>
+                    <Column editable="false" title="Costo" type="java.lang.Double"/>
+                    <Column editable="false" title="Precio individual" type="java.lang.Double"/>
+                    <Column editable="false" title="Precio en paquete" type="java.lang.Double"/>
                   </Table>
                 </Property>
                 <Property name="autoResizeMode" type="int" value="1"/>
@@ -355,21 +345,6 @@
                       <Renderer/>
                     </Column>
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                      <Title/>
-                      <Editor/>
-                      <Renderer/>
-                    </Column>
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                      <Title/>
-                      <Editor/>
-                      <Renderer/>
-                    </Column>
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                      <Title/>
-                      <Editor/>
-                      <Renderer/>
-                    </Column>
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
                       <Title/>
                       <Editor/>
                       <Renderer/>
